another method of avoiding overflow hidden problem

--- a/assets/css/trp-preview-iframe-style.css
+++ b/assets/css/trp-preview-iframe-style.css
@@ -47,10 +47,6 @@ span.trp-edit-translation svg {
     cursor: not-allowed !important;
 }
 
-span.trp-edit-translation.trp-in-overflow-hidden{
-    margin-left:0 !important;
-}
-
 .trp-highlight{
     outline: 2px solid #e2e4e7;
 }
@@ -65,4 +61,18 @@ span.trp-edit-translation.trp-in-overflow-hidden{
 
 translate-press{
     pointer-events: all;
+}
+
+.trp-overflow-transform-fixer{
+    transform: translate3d(0,0,0);
+    -moz-transform: translate3d(0,0,0);
+    -webkit-transform: translate3d(0,0,0);
+}
+
+.trp-overflow-transform-fixer span.trp-edit-translation{
+    position:fixed;
+}
+
+.trp-overflow-inside-fixer span.trp-edit-translation{
+    margin-left:0 !important;
 }
